# Local-RAG-Intel-Core-CPU

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: fields.py  routes.py  schemas.py
src/config/: constants.py
src/core/: __init__.py  orchestrator.py
src/ingestion/: __init__.py  chunker.py  embedder.py  loader.py  uploader.py
src/prompts/: __init__.py  rag_instruction.py
src/retrieval/: __init__.py  embedder.py  retriever.py
src/services/: __init__.py  qdrant_service.py
